# ChessEngine

./: .gitignore  CMakeLists.txt  README.md  README.txt  audio.cpp  audio.h  boardview.cpp  boardview.h  engine.cpp  engine.h  game.cpp  game.h  main.cpp  ucimain.cpp  ucisession.cpp  ucisession.h
